--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 body {
-    background-image: url("../pics/houndstooth-pattern.png");
+    background-image: url("../pics/shattered.png");
 }
 .header {
-    font-size: 75px;
+    font-size: 85px;
     font-family: 'Permanent Marker', cursive;
 }
 img {
@@ -11,11 +11,12 @@ img {
 }
 .ul {
     font-family: 'Gloria Hallelujah', cursive;
+    font-size: 25px;
     padding: 20px;
 }
 #target-number {
-    font-size: 60px;
-    color: magenta;
+    font-size: 70px;
+    color: rgb(33, 126, 150);
 }
 .wins-loss {
 
@@ -29,4 +30,19 @@ img {
 }
 #crys {
     width: 150px;
+}
+#wins {
+    font-family: 'Gloria Hallelujah', cursive;
+    font-size: 25px;
+    padding: 15px;
+}
+#losses {
+    font-family: 'Gloria Hallelujah', cursive;
+    font-size: 25px;
+    padding: 15px;
+}
+.number-picked {
+    font-family: 'Gloria Hallelujah', cursive;
+    font-size: 35px;
+    padding: 15px;
 }
