--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,12 @@ img {
     font-size: 25px;
     padding: 20px;
 }
+.list {
+    border-radius: 12%;
+}
 #target-number {
     font-size: 70px;
     color: rgb(33, 126, 150);
-}
-.wins-loss {
-
 }
 .number-picked {
     font-size: 35px;
@@ -27,6 +27,9 @@ img {
 .crystals {
     width: 150px;
     margin-left: 25px;
+}
+.crystals:hover {
+    opacity: 0.6;
 }
 #crys {
     width: 150px;
@@ -39,10 +42,14 @@ img {
 #losses {
     font-family: 'Gloria Hallelujah', cursive;
     font-size: 25px;
-    padding: 15px;
+    padding-bottom: 15px;
+}
+.wins-loss {
+    border-radius: 12px;
 }
 .number-picked {
     font-family: 'Gloria Hallelujah', cursive;
     font-size: 35px;
     padding: 15px;
+    border-radius: 12px;
 }
